--- a/index.html
+++ b/index.html
@@ -146,10 +146,10 @@
             width: 100%;
             height: 100%;
             background-image: url('spin.png');
-            background-size: cover;
+            background-size: 150%;
             background-position: center;
             background-repeat: no-repeat;
-            animation: spin 20s linear infinite;
+            animation: spin 15s linear infinite;
             opacity: 0.15;
             pointer-events: none;
             z-index: 1;
@@ -588,10 +588,10 @@
                         width: '100%',
                         height: '100%',
                         backgroundImage: 'url("spin.png")',
-                        backgroundSize: 'cover',
+                        backgroundSize: '150%',
                         backgroundPosition: 'center',
                         backgroundRepeat: 'no-repeat',
-                        animation: 'spin 20s linear infinite',
+                        animation: 'spin 15s linear infinite',
                         opacity: 0.2,
                         pointerEvents: 'none',
                         zIndex: 1,
