--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Amazing Bulk - Gamma Powered Memecoin | $BULK on Solana</title>
+    <title>The Amazing Bulk - gRape Schmeg powered token | $BULK on Solana</title>
     <meta name="description" content="The Amazing Bulk - A purple gamma-powered memecoin on Solana. Fair launch, community driven, no utility. Just pure BULK energy!">
-    <meta property="og:title" content="The Amazing Bulk - Gamma Powered Memecoin">
+    <meta property="og:title" content="The Amazing Bulk - gRape Schmeg powered token">
     <meta property="og:description" content="Time to get BULKED! The Amazing Bulk is a purple gamma-powered memecoin on Solana.">
     <meta property="og:image" content="https://i.imgur.com/ynAj4P7.png">
     <meta property="og:url" content="https://theamazingbulk.com">
@@ -446,7 +446,7 @@
 
             useEffect(() => {
                 const elements = [];
-                const messages = ['BULK!', 'GAMMA!', 'PURPLE!', 'HULK!', 'MOON!', 'PUMP!', 'WEN?', 'LFG!', 'TO THE MOON!', 'DIAMOND HANDS!'];
+                const messages = ['Schmeg', 'Purple', 'Inject Schmeg', 'gRape Schmeg', 'Purple Schmeg'];
                 
                 for (let i = 0; i < 5; i++) {
                     elements.push({
@@ -620,7 +620,7 @@
                 }, e('div', { style: { textAlign: 'center', animation: 'intro-pop 0.6s cubic-bezier(0.34, 1.56, 0.64, 1)' } },
                     e('div', { style: { fontSize: '64px', animation: 'bounce-icon 1s ease-in-out infinite', marginBottom: '16px' } }, '⚡'),
                     e('h1', { style: { fontSize: '32px', color: '#39FF14', fontWeight: 'bold', marginBottom: '8px', textShadow: '0 0 30px #39FF14' } }, 'TIME TO GET BULKED!'),
-                    e('p', { style: { fontSize: '18px', color: '#FFD700', letterSpacing: '0.05em', textShadow: '0 0 15px rgba(255,215,0,0.8)' } }, 'GAMMA POWERED')
+                    e('p', { style: { fontSize: '18px', color: '#FFD700', letterSpacing: '0.05em', textShadow: '0 0 15px rgba(255,215,0,0.8)' } }, 'gRape Schmeg powered')
                 )),
 
                 // Main content
@@ -650,7 +650,7 @@
                                     letterSpacing: '0.05em', 
                                     textShadow: '0 0 12px rgba(255,215,0,0.7)' 
                                 } 
-                            }, 'GAMMA POWERED MEMECOIN')
+                            }, 'gRape Schmeg powered token')
                         ),
 
                         // Banner
