--- a/index.html
+++ b/index.html
@@ -832,24 +832,55 @@
                             fontWeight: 'bold'
                         }
                     }, '×'),
-                    e('h2', { style: { fontSize: '36px', fontWeight: 'bold', textAlign: 'center', marginBottom: '24px', background: 'linear-gradient(135deg, #39FF14 0%, #FFD700 50%, #39FF14 100%)', WebkitBackgroundClip: 'text', WebkitTextFillColor: 'transparent', backgroundClip: 'text' } }, 'ABOUT $BULK'),
-                    e('div', { style: { display: 'flex', flexDirection: 'column', gap: '16px', color: 'rgba(255,255,255,0.9)' } },
+                    e('h2', { style: { fontSize: '36px', fontWeight: 'bold', textAlign: 'center', marginBottom: '24px', background: 'linear-gradient(135deg, #39FF14 0%, #FFD700 50%, #39FF14 100%)', WebkitBackgroundClip: 'text', WebkitTextFillColor: 'transparent', backgroundClip: 'text' } }, 'THE LEGEND OF BULK'),
+                    e('div', { style: { display: 'flex', flexDirection: 'column', gap: '16px', color: 'rgba(255,255,255,0.9)', maxHeight: '70vh', overflowY: 'auto', paddingRight: '8px' } },
                         e('div', { style: { background: 'rgba(0,0,0,0.5)', padding: '16px', borderRadius: '8px', border: '1px solid rgba(57,255,20,0.4)' } },
-                            e('h3', { style: { fontSize: '16px', fontWeight: 'bold', color: '#39FF14', marginBottom: '8px' } }, '⚡ WHAT IS THE AMAZING BULK?'),
-                            e('p', { style: { fontSize: '14px', lineHeight: '1.6' } }, 'Picture the Incredible Hulk... but PURPLE! The Amazing Bulk is a gamma-powered memecoin on Solana, bringing the power of memes and community together. No utility, no promises, just pure BULK energy!')
+                            e('p', { style: { fontSize: '14px', lineHeight: '1.8', marginBottom: '12px' } }, 'Long before the Bulk rampaged across green screens, there existed the Realm of Renderia, a dimension made entirely from unfinished CGI assets and royalty-free sound effects.'),
+                            e('p', { style: { fontSize: '14px', lineHeight: '1.8', marginBottom: '12px' } }, 'In Renderia, every being was born from a corrupted .ZIP file. But one day, a glitch so powerful occurred that it birthed a creature of destiny: The Bulk, Son of Pixel and Prophet of Low Resolution.')
                         ),
                         e('div', { style: { background: 'rgba(0,0,0,0.5)', padding: '16px', borderRadius: '8px', border: '1px solid rgba(155,77,202,0.4)' } },
-                            e('h3', { style: { fontSize: '16px', fontWeight: 'bold', color: '#9B4DCA', marginBottom: '8px' } }, '📈 TOKENOMICS'),
-                            e('ul', { style: { fontSize: '14px', listStyle: 'none', display: 'flex', flexDirection: 'column', gap: '6px' } },
-                                e('li', null, '★ 100% Fair Launch on Pump.fun'),
-                                e('li', null, '★ No Team Tokens'),
-                                e('li', null, '★ Liquidity Locked'),
-                                e('li', null, '★ Community Driven')
-                            )
+                            e('p', { style: { fontSize: '14px', lineHeight: '1.8', marginBottom: '12px' } }, 'The elders whispered that his arrival was foretold in the Book of Untextured Models, which stated:'),
+                            e('p', { style: { fontSize: '14px', lineHeight: '1.8', marginBottom: '12px', fontStyle: 'italic', color: '#9B4DCA', paddingLeft: '16px', borderLeft: '3px solid #9B4DCA' } }, '"One shall rise wearing the cursed color #A020F0 (Purple-ish), and he shall lag the world into chaos."')
+                        ),
+                        e('div', { style: { background: 'rgba(0,0,0,0.5)', padding: '16px', borderRadius: '8px', border: '1px solid rgba(57,255,20,0.4)' } },
+                            e('p', { style: { fontSize: '14px', lineHeight: '1.8', marginBottom: '12px' } }, 'As a baby, Bulk cried in WAV format. As a toddler, he accidentally destroyed his village by bumping into it, since it only had two polygons.')
                         ),
                         e('div', { style: { background: 'rgba(0,0,0,0.5)', padding: '16px', borderRadius: '8px', border: '1px solid rgba(255,215,0,0.4)' } },
-                            e('h3', { style: { fontSize: '16px', fontWeight: 'bold', color: '#FFD700', marginBottom: '8px' } }, '👥 JOIN THE BULK ARMY'),
-                            e('p', { style: { fontSize: '14px', lineHeight: '1.6' } }, 'Follow us on X (Twitter) and join our community to stay updated on all things BULK. Together, we BULK!')
+                            e('p', { style: { fontSize: '14px', lineHeight: '1.8', marginBottom: '12px' } }, 'When he reached adulthood, Bulk was approached by The Rendering Oracle, a floating pair of eyes that said: "You are destined to unite the Stock Photo Kingdoms." Bulk responded: "RRRRGH." The Oracle considered that good enough.')
+                        ),
+                        e('div', { style: { background: 'rgba(0,0,0,0.5)', padding: '16px', borderRadius: '8px', border: '1px solid rgba(57,255,20,0.4)' } },
+                            e('p', { style: { fontSize: '14px', lineHeight: '1.8', marginBottom: '8px' } }, 'To prepare him, the Oracle trained Bulk in ancient arts:'),
+                            e('ul', { style: { fontSize: '14px', listStyle: 'none', display: 'flex', flexDirection: 'column', gap: '6px', paddingLeft: '16px' } },
+                                e('li', null, '• The Blur Punch'),
+                                e('li', null, '• The Frame-Skip Dash'),
+                                e('li', null, '• The JPEG Slam, capable of lowering image quality across continents')
+                            )
+                        ),
+                        e('div', { style: { background: 'rgba(0,0,0,0.5)', padding: '16px', borderRadius: '8px', border: '1px solid rgba(155,77,202,0.4)' } },
+                            e('p', { style: { fontSize: '14px', lineHeight: '1.8', marginBottom: '12px' } }, 'But a great evil rose: Dr. Cantafford, the Mad Scientist King, who sought to plunge Renderia into Ultra-HD, a forbidden resolution.')
+                        ),
+                        e('div', { style: { background: 'rgba(0,0,0,0.5)', padding: '16px', borderRadius: '8px', border: '1px solid rgba(57,255,20,0.4)' } },
+                            e('p', { style: { fontSize: '14px', lineHeight: '1.8', marginBottom: '12px' } }, 'Dr. Cantafford forged the Crystal of Copyright, an artifact allowing him to create assets NOT from public domain websites. This threatened the balance of the universe.')
+                        ),
+                        e('div', { style: { background: 'rgba(0,0,0,0.5)', padding: '16px', borderRadius: '8px', border: '1px solid rgba(255,215,0,0.4)' } },
+                            e('p', { style: { fontSize: '14px', lineHeight: '1.8', marginBottom: '12px' } }, 'Only Bulk, whose DNA was 97% purple compression artifacts, could resist the Crystal\'s power. He set out on his hero\'s journey, sliding through backgrounds like a PowerPoint transition sent by fate.')
+                        ),
+                        e('div', { style: { background: 'rgba(0,0,0,0.5)', padding: '16px', borderRadius: '8px', border: '1px solid rgba(57,255,20,0.4)' } },
+                            e('p', { style: { fontSize: '14px', lineHeight: '1.8', marginBottom: '8px' } }, 'Along the way, Bulk bonded with legendary allies:'),
+                            e('ul', { style: { fontSize: '14px', listStyle: 'none', display: 'flex', flexDirection: 'column', gap: '6px', paddingLeft: '16px' } },
+                                e('li', null, '• Lady PNG, who could remove backgrounds with a single breath'),
+                                e('li', null, '• The Mighty Stock-Horse, whose gallop was a looping GIF'),
+                                e('li', null, '• Captain Greenscreen, master of appearing anywhere yet belonging nowhere')
+                            )
+                        ),
+                        e('div', { style: { background: 'rgba(0,0,0,0.5)', padding: '16px', borderRadius: '8px', border: '1px solid rgba(155,77,202,0.4)' } },
+                            e('p', { style: { fontSize: '14px', lineHeight: '1.8', marginBottom: '12px' } }, 'In the final battle, Bulk faced Dr. Cantafford in the Valley of Unpaid Interns. Each punch caused a different default Windows sound effect. The prophecy was fulfilled.')
+                        ),
+                        e('div', { style: { background: 'rgba(0,0,0,0.5)', padding: '16px', borderRadius: '8px', border: '1px solid rgba(57,255,20,0.4)' } },
+                            e('p', { style: { fontSize: '14px', lineHeight: '1.8', marginBottom: '12px', fontWeight: 'bold', color: '#39FF14' } }, 'Bulk unleashed his ultimate attack: THE POLYGONAL ROAR, shaking the world so violently that every texture failed to load at once. Cantafford\'s Ultra-HD ambition crumbled into 144p dust.')
+                        ),
+                        e('div', { style: { background: 'rgba(0,0,0,0.5)', padding: '16px', borderRadius: '8px', border: '1px solid rgba(255,215,0,0.4)' } },
+                            e('p', { style: { fontSize: '14px', lineHeight: '1.8', marginBottom: '12px' } }, 'Peace returned to Renderia. The sky flickered between stock sunsets once more. And Bulk? He wandered into legend… destined to appear whenever someone\'s rendering software crashes.')
                         )
                     )
                 ))
